# c_darwin

./: .envrc  .gitignore  .gitmodules  Makefile  clib.json  meson.build  meson_options.txt  wcap.sh  wrec-dev.sh
Docker/: Dockerfile  Makefile
active-app/: active-app.c  active-app.h  meson.build
active-app-module/: active-app-module.c  active-app-module.h  meson.build
active-app-module-test/: active-app-module-test.c  active-app-module-test.h  meson.build
active-app-test/: active-app-test.c  active-app-test.h  meson.build
alacritty/: alacritty.c  alacritty.h  meson.build
animated-gif/: animated-gif.c  animated-gif.h  meson.build
animated-gif-test/: animated-gif-test.c  meson.build
app/: app.c  app.h  meson.build
app-utils/: app-utils.c  app-utils.h  meson.build
app-utils-test/: app-utils-test.c  app-utils-test.h  meson.build
app/observe/: meson.build  observe.c  observe.h
app/utils/: meson.build  utils.c  utils.h
app/utils/test/: test.c  test.h
async/: async.c  async.h  meson.build
async-test/: async-test.c
audit/: audit.c  audit.h  meson.build
audit-test/: audit-test.c  audit-test.h  meson.build
cache-utils/: cache-utils.c  cache-utils.h  meson.build
cache-utils-test/: cache-utils-test.c  cache-utils-test.h  meson.build
capture/: capture.c  capture.h  meson.build
capture-test/: capture-test.c  capture-test.h  meson.build
capture-utils/: capture-utils.c  capture-utils.h  meson.build
capture/animate/: animate.c  animate.h  meson.build
capture/save/: meson.build  save.c  save.h
capture/type/: meson.build  type.c  type.h
capture/utils/: meson.build  utils.c  utils.h
capture/window/: meson.build  window.c  window.h
color/: color.c  color.h  meson.build
config-utils/: c.c  config-utils.c  config-utils.h  meson.build
core/: Makefile  a.h  cmds.sh.j2  core.c  core.c.gpp  core.c.j2  core.h  core.h.gpp  core.h.j2  core.yaml  gpp-core.c  gpp-core.h  include.headers.yaml  includes.h  meson.build
core-utils/: core-utils-extern.h  core-utils.c  core-utils.h  meson.build
core/debug/: debug.c  debug.h  meson.build
core/image/: image.c  image.h  meson.build
core/utils/: meson.build  utils.c  utils.h
darwin-ls/: darwin-ls-commands.c  darwin-ls-commands.h  darwin-ls-httpserver-incbin.c  darwin-ls-httpserver-vars.c  darwin-ls-httpserver.c  darwin-ls-httpserver.h  darwin-ls.c  darwin-ls.h  hash.sh  meson.build
darwin-ls/.assets/: hash.sh  main.js
darwin-ls/.assets/reveal/js/: config.js
darwin-ls/assets/: multiple-presentations.html
darwin-ls/assets/reveal/: index.html
darwin-ls/assets/reveal/css/: reveal.scss
db/: db.c  db.c.gpp  db.c.j2  db.h  meson.build
db-test/: db-test.c  db-test.h  meson.build
display/: display.c  display.h  meson.build
display-utils/: display-utils.c  display-utils.h  meson.build
display/utils/: meson.build  utils.c  utils.h
dls/: .envrc  LOG  Makefile  command-animate.c  command-animate.h  command-capture.c  command-capture.h  command-clipboard.c  command-clipboard.h  command-display.c  command-display.h  command-extract.c  command-extract.h  command-keylogger.c  command-keylogger.h  command-layout.c  command-layout.h  command-prompt.c  command-prompt.h  command-template.c  command-template.h  command-terminal.c  command-terminal.h  command-test.c  command-test.h  commands.h  croak.h  defines.h  dls-aliases.c  dls-aliases.h  dls-bestline-static-assets.c  dls-bestline.c  dls-bestline.h  dls-commands-static.c  dls-commands.c  dls-commands.c.gpp  dls-commands.c.j2  dls-commands.h  dls-commands.h.gpp  dls-commands.h.j2  (+22 more)
dls/vars/: command_functions.yaml  commands.yaml  modes.yaml  options.yaml
dock/: dock.c  dock.h  meson.build
dock-utils/: dock-utils.c  meson.build
dock/utils/: meson.build  utils.c  utils.h
etc/: common.gpp  gpp.yaml  keybinds.json  keybinds.yaml  test.conf
event/: event.c  event.h  meson.build
focused/: focused.c  focused.h  meson.build
font-utils/: font-utils.c  font-utils.h  meson.build
frameworks/: frameworks.c  frameworks.h  meson.build
hotkey-utils/: config.yaml  dls.hotkeys.yaml  hotkey-utils-types.c  hotkey-utils-types.h  hotkey-utils.c  hotkey-utils.h  hotkeys.yaml  meson.build
hotkey-utils-test/: hotkey-utils-test.c  hotkey-utils-test.h  meson.build
httpserver/: httpserver.c  httpserver.h  meson.build
httpserver-utils/: httpserver-utils.c  httpserver-utils.h  meson.build
icon-utils/: icon-utils.c  icon-utils.h  icon-xml-utils.c  icon-xml-utils.h  meson.build
icons/: icons.c  icons.h  inc.c  inc.h
image/: image.c  image.h  meson.build
image-utils/: image-utils.c  image-utils.h  meson.build
include/: ansicodes.h  chalk.h  color.h  includes.h  keylogger.h  log.h  mouse.h  sql.h  tcolor.h  term.h  timequick.h  types.h
iokit-utils/: iokit-utils.c  iokit-utils.h  meson.build
kc/: kc.c  kc.h  meson.build
keyboard/: keyboard.c  keyboard.h  meson.build
keyboard-utils/: keyboard-utils.c  keyboard-utils.h  meson.build
keychain-utils/: a.c  a.h  keychain-utils.c  keychain-utils.h  meson.build
keylogger/: keylogger.c  keylogger.h  meson.build
keylogger-config/: keylogger-config-includes.c  keylogger-config-includes.h  keylogger-config-logic.c  keylogger-config-logic.h  keylogger-config-types.c  keylogger-config-types.h  keylogger-config.c  keylogger-config.h  meson.build
keylogger-config-test/: keylogger-config-test.c  keylogger-config-test.h  meson.build
keylogger-db/: keylogger-db.c  keylogger-db.h  meson.build
keylogger-db-test/: keylogger-db-test.c  keylogger-db-test.h  meson.build
keylogger-test/: keylogger-test.c  keylogger-test.h  meson.build
kitty/: kitty-color.c  kitty-color.h  kitty-module.c  kitty-module.h  kitty.c  kitty.h  meson.build
kitty-ls/: kitty-ls.c  meson.build
kitty-msg-test/: kitty-msg-test.c  kitty-msg-test.h  meson.build
kitty-shm-test/: kitty-shm-test.c  kitty-shm-test.h  meson.build
kitty-test/: kitty-test.c  kitty-test.h  meson.build
layout/: layout.h
layout-test/: layout-test.c  layout-test.h  meson.build
ls-proc/: ls-proc-args.c  ls-proc-args.h  ls-proc.c  ls-proc.h  (+1 more)
mt/: mt.c  (+23 more)
(+388 files in other folders)
