project('c_darwin', ['c'],default_options: ['warning_level=2','c_std=gnu99',],
  subproject_dir: 'submodules/c_deps/subprojects',
  version:'0.0.1')
fs = import('fs')
subdir('submodules/c_deps/meson/programs')
subdir('submodules/c_deps/meson/compilers')
pwd = meson.current_source_dir()
c_deps_dir = join_paths(meson.current_source_dir(),'submodules/c_deps')
subdir('submodules/c_deps/meson/git')
subdir('submodules/c_deps/meson/version')
subdir('meson')
inc = [include_directories(
  '.',
  'submodules',
  'submodules/c_deps/submodules',
  'submodules/c_deps',
  'submodules/c_deps/submodules/c_ansi',
  'submodules/c_deps/submodules/reproc',
  'submodules/c_deps/submodules/reproc/reproc',
  'submodules/c_deps/submodules/reproc/reproc/include',
  'submodules/c_deps/submodules/reproc/reproc/include/reproc',
  'submodules/c_deps/submodules/c_ansi/ansi-codes',
  'submodules/c_deps/submodules/iowow/src',
  'submodules/c_deps/submodules/iowow/src/kv',
  'submodules/c_deps/submodules/iowow/src/fs',
  'submodules/c_deps/submodules/iowow/src/log',
  'submodules/c_deps/submodules/iowow/src/json',
  'submodules/c_deps/submodules/iowow/src/platform',
  'submodules/c_deps/submodules/iowow',
  'submodules/c_deps/submodules/hidapi/hidapi',
  'submodules/c_deps/submodules/libusb/libusb',
  'submodules/c_deps/submodules/libusb/Xcode',
  'submodules/c_deps/submodules/generic-print',
)]
#############################################################################
subdir('submodules')
#############################################################################
subdir('frameworks')
subdir('cache-utils')
subdir('output-utils')
subdir('keychain-utils')
subdir('terminal')
subdir('systemprofiler')
subdir('app')
subdir('terminal-utils')
subdir('image-utils')
subdir('icon-utils')
subdir('osx-keys')
subdir('process')
subdir('process-utils')
subdir('mouse-utils')
subdir('keyboard-utils')
subdir('monitor-utils')
subdir('font-utils')
subdir('usbdevs-utils')
subdir('mission-control-utils')
subdir('pbpaste')
subdir('pasteboard')
subdir('table-utils')
subdir('space-utils')
subdir('display-utils')
subdir('dock-utils')
subdir('iokit-utils')
subdir('menu-bar-utils')
subdir('window-utils')
subdir('app-utils')
subdir('core-utils')
#############################################################################
subdir('system-utils')
subdir('active-app')
subdir('active-app-module')
subdir('kitty')
subdir('alacritty')
subdir('wrec-image')
subdir('wrec-common')
subdir('wrec-utils')
subdir('wrec-capture')
subdir('screen-utils')
subdir('focused')
subdir('audit')
#//////////////////////////////////////////////////////////////////////
subdir('wrec-cli')
subdir('wrec-animation')
#//////////////////////////////////////////////////////////////////////
subdir('keylogger-db')
subdir('keylogger')
subdir('keylogger-config')
#//////////////////////////////////////////////////////////////////////
subdir('kitty-ls')
subdir('ls-proc')
subdir('rectangle')
subdir('rectangle-cli')
subdir('wrec-animation-cli')
subdir('hotkey-utils')
subdir('darwin-ls')
#//////////////////////////////////////////////////////////////////////
subdir('app-utils-test')
subdir('system-utils-test')
subdir('active-app-test')
subdir('pasteboard-test')
subdir('wrec-capture-test')
subdir('wrec-animation-test')
subdir('keylogger-config-test')
subdir('active-app-module-test')
subdir('audit-test')
subdir('kitty-test')
subdir('window-utils-test')
subdir('rectangle-test')
subdir('mac-load-test')
subdir('wrec-test')
subdir('wrec-image-test')
subdir('record-focused-window-test')
subdir('metalang99-test')
subdir('screen-utils-test')
subdir('space-utils-test')
subdir('manage-window-test')
subdir('process-test')
subdir('usbdevs-utils-test')
subdir('cache-utils-test')
subdir('tesseract-test')
subdir('hotkey-utils-test')
subdir('keylogger-test')
subdir('process-utils-test')
subdir('mouse-utils-test')
